--- a/View/Refund.html
+++ b/View/Refund.html
@@ -17,14 +17,14 @@
       </div>
       <nav>
         <ul>
-          <li><a class="ActivePage" href="../index.html">Home</a></li>
+          <li><a class="ActivePage" href="index.html">Home</a></li>
           <li><a href="./View/EventCalendar.html">Events</a></li>
           <li><a href="./View/contactUs 1.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="./View/login.html">Login</a>
-        <a href="./View/signUp.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./View/login 1.html">Login</a>
+        <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <main class="refund-policy-container">
@@ -72,6 +72,8 @@
     </main>
 
     <!-- Footer Section -->
+    
+    <!-- Footer Section -->
     <footer id="Footer-Section">
       <div class="footer-container">
         <div class="footer-brand">
@@ -82,17 +84,13 @@
           <div class="footer-column">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="./View/contactUs.html">Contact</a></li>
+              <li><a href="./View/contactUs 1.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Help Center</a></li>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="./View/Refund.html">Refund Policy</a></li>
             </ul>
           </div>
           <div class="footer-column">
