--- a/View/WaitingList.html
+++ b/View/WaitingList.html
@@ -22,14 +22,14 @@ session_start();
       </div>
       <nav>
         <ul>
-          <li><a class="ActivePage" href="../index.html">Home</a></li>
-          <li><a href="EventCalendar.html">Events</a></li>
-          <li><a href="contactUs.html">Contact Us</a></li>
+          <li><a class="ActivePage" href="index.html">Home</a></li>
+          <li><a href="./View/EventCalendar.html">Events</a></li>
+          <li><a href="./View/contactUs 1.html">Contact Us</a></li>
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="login.html">Login</a>
-        <a href="signUp.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./View/login 1.html">Login</a>
+        <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <!-- Header Ends -->
@@ -117,6 +117,8 @@ session_start();
     </main>
 
     <!-- Footer Section -->
+    
+    <!-- Footer Section -->
     <footer id="Footer-Section">
       <div class="footer-container">
         <div class="footer-brand">
@@ -127,17 +129,13 @@ session_start();
           <div class="footer-column">
             <h4>Company</h4>
             <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contactUs 1.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer-column">
             <h4>Support</h4>
             <ul>
-              <li><a href="#">Help Center</a></li>
-              <li><a href="#">Terms of Service</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="./Refund.html">Refund Policy</a></li>
             </ul>
           </div>
           <div class="footer-column">
