--- a/View/login 1.html
+++ b/View/login 1.html
@@ -44,14 +44,14 @@
         </div>
 
         <a
-          href="dashboard.html"
+          href="./DashBoard.html"
           class="login-btn"
           onclick="return validateLogin()"
           >Log In</a
         >
 
         <p class="signup-link">
-          Don't have an account? <a href="signup.html">Sign up</a>
+          Don't have an account? <a href="./signUp 2.html">Sign up</a>
         </p>
       </form>
     </div>
