--- a/View/WaitingList.html
+++ b/View/WaitingList.html
@@ -28,8 +28,8 @@ session_start();
         </ul>
       </nav>
       <div id="LogSing">
-        <a class="Blacktxt" href="./View/login 1.html">Login</a>
-        <a href="./View/signUp 2.html" id="sgnUp">Sign Up</a>
+        <a class="Blacktxt" href="./login 1.html">Login</a>
+        <a href="./signUp 2.html" id="sgnUp">Sign Up</a>
       </div>
     </header>
     <!-- Header Ends -->
@@ -106,9 +106,7 @@ session_start();
                 </tbody>
               </table>
               <div id="RegisterButtonContainer">
-                <button id="RegisterButton"
-                  >Register for Waiting List</button
-                >
+                <button id="RegisterButton">Register for Waiting List</button>
               </div>
             </div>
           </div>
@@ -117,7 +115,7 @@ session_start();
     </main>
 
     <!-- Footer Section -->
-    
+
     <!-- Footer Section -->
     <footer id="Footer-Section">
       <div class="footer-container">
