--- a/View/login 1.html
+++ b/View/login 1.html
@@ -14,7 +14,7 @@
     <div class="container">
       <i
         class="fas fa-arrow-left back-btn"
-        onclick="window.location.href='index.html'"
+        onclick="window.location.href='../index.html'"
       ></i>
       <h2>LOGIN PAGE</h2>
 
