--- a/View/contactUs.html
+++ b/View/contactUs.html
@@ -8,11 +8,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="../Asset/CSS/Contactus 1.css" />
+    <link rel="stylesheet" href="../Asset/CSS/Contactus.css" />
   </head>
   <body>
     <div class="contact-container" id="form-container">
-      <i class="fas fa-arrow-left back-icon"></i>
+      <i
+        class="fas fa-arrow-left back-icon"
+        onclick="window.location.href='../index.html' "
+      ></i>
       <h2>Contact Us</h2>
       <p>
         We’d love to hear from you! Fill out the form below and we’ll get back
