--- a/View/WaitingList.html
+++ b/View/WaitingList.html
@@ -22,8 +22,8 @@ session_start();
       </div>
       <nav>
         <ul>
-          <li><a class="ActivePage" href="index.html">Home</a></li>
-          <li><a href="./View/EventCalendar.html">Events</a></li>
+          <li><a class="ActivePage" href="../index.html">Home</a></li>
+          <li><a href="./EventCalendar.html">Events</a></li>
           <li><a href="./View/contactUs 1.html">Contact Us</a></li>
         </ul>
       </nav>
