--- a/View/emailVarifation 1.html
+++ b/View/emailVarifation 1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../Asset/CSS/emailVarifation 1.css" />
   </head>
   <body>
-    <form class="emailVarifation" id="otpForm" onsubmit="return validateOTP()">
+    <form class="emailVarifation" id="otpForm" action="login.html" onsubmit="return validateOTP()">
       <div class="verify-container">
         <i
           class="fas fa-arrow-left back-btn"
@@ -43,7 +43,7 @@
 
         <p class="change-email">
           Want to Change Your Email Address?
-          <a href="../View/signUp 2.html">Change Here</a>
+          <a href="../View/signUp.html">Change Here</a>
         </p>
 
         <button class="verify-btn" type="submit">Verify Email</button>
