--- a/View/login.html
+++ b/View/login.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,7 +48,7 @@
        <button type="submit" class="login-btn">login</button>
 
         <p class="signup-link">
-          Don't have an account? <a href="./signUp 2.html">Sign up</a>
+          Don't have an account? <a href="./signUp.html">Sign up</a>
         </p>
       </form>
     </div>
