--- a/View/contactUs.html
+++ b/View/contactUs.html
@@ -42,7 +42,7 @@
             rows="5"
             placeholder="Your Message"
           ></textarea>
-          <div id="messageError" class="error"></div> <!-- Added error div for message -->
+          <div id="messageError" class="error"></div> 
         </div>
         <button type="submit" class="submit-btn">Send Message</button>
       </form>
