--- a/View/signUp.html
+++ b/View/signUp.html
@@ -22,7 +22,7 @@
 
       <form
         class="signup-form"
-        id="signupForm" method="POST" action="../Controller/signUpController.php"
+        id="signupForm" method="POST" action="./emailVarifation 1.html"
         onsubmit="return validationVerification()"
       >
         <div class="name-fields">
