--- a/Asset/CSS/Style_EventCalender.css
+++ b/Asset/CSS/Style_EventCalender.css
@@ -229,7 +229,7 @@ nav {
 #EventCardContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 .eventCards {
