--- a/View/contactUs.html
+++ b/View/contactUs.html
@@ -14,7 +14,7 @@
     <div class="contact-container" id="form-container">
       <i
         class="fas fa-arrow-left back-icon"
-        onclick="window.location.href='../index.html'"
+        onclick="window.location.href='../index.php'"
       ></i>
       <h2>Contact Us</h2>
       <p>
