--- a/View/login.html
+++ b/View/login.html
@@ -16,7 +16,7 @@
     <div class="container">
       <i
         class="fas fa-arrow-left back-btn"
-        onclick="window.location.href='../index.html'"
+        onclick="window.location.href='../index.php'"
       ></i>
       <h2>LOGIN PAGE</h2>
 
