--- a/View/signUp.html
+++ b/View/signUp.html
@@ -14,7 +14,7 @@
     <div class="container">
       <i
         class="fas fa-arrow-left back-btn"
-        onclick="window.location.href='../index.html' "
+        onclick="window.location.href='../index.php' "
       ></i>
       <h2>Registration</h2>
       <p>Sign up now and get full access to our Event</p>
