--- a/Asset/CSS/Style_Users.css
+++ b/Asset/CSS/Style_Users.css
@@ -210,6 +210,7 @@ main {
 /* Error MSG */
 #Search_bar_error {
   color: red;
+  font-weight: 600;
   font-size: 14px;
   margin-top: 5px;
   text-align: center;
